# tgoskits

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .image.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Feat_x86 64 ptrace clean · rcore-os_tgoskits@f4d00dd.html  LICENSE-APACHE-2.0  LICENSE-MIT  LICENSE.MulanPubL2  Makefile  PR.md  README.md  README_CN.md  STARRY_SYSCALL_BOUNDARY_TESTS.md  StarryOS_项目阶段汇报.pptx  WORK_PROGRESS.md  build.rs  def.rs  flake.nix  orangepi.dtb  p.md  percpu.x  release-plz.toml  rust-toolchain.toml  rustfmt.toml  study_records.md  test_aarch64.sh  test_aarch64_el1.sh  test_aarch64_el2.sh  test_all.sh  test_loongarch64.sh  tgoskits-plugin-implementation-journal.md  蒋丰泽.md
axdevice_base/: Cargo.toml
axdevice_base/src/: emu_type.rs  lib.rs  test.rs
axdriver_base/: Cargo.toml  README.md
axdriver_base/src/: lib.rs
axdriver_block/: Cargo.toml  README.md
axdriver_block/src/: ahci.rs  bcm2835sdhci.rs  lib.rs  ramdisk.rs  sdmmc.rs
axdriver_input/: Cargo.toml
axdriver_net/: Cargo.toml  README.md
axdriver_net/src/: fxmac.rs  ixgbe.rs  lib.rs  net_buf.rs
axdriver_virtio/: Cargo.toml  README.md
axdriver_virtio/src/: lib.rs  net.rs  socket.rs
axdriver_vsock/: Cargo.toml
axdriver_vsock/src/: lib.rs
axvisor_api_proc/: Cargo.toml  README.md
axvisor_api_proc/src/: items.rs  lib.rs
bootloader/axloader/: Cargo.toml  README.md  build.rs
bootloader/axloader/scripts/: build-install-efi.sh
bootloader/axloader/src/: console.rs  control.rs  discovery.rs  elf_loader.rs  entry.rs  http.rs  identity.rs  lib.rs  main.rs  uefi_boot.rs
bootloader/http-loader/: Cargo.toml
bootloader/http-loader/src/: main.rs  uefi_boot.rs
components/aarch64_sysreg/: Cargo.toml  README.md  README_CN.md
components/aarch64_sysreg/src/: lib.rs  operation_type.rs  registers_type.rs  system_reg_type.rs
components/aic8800/: CHANGELOG.md  Cargo.toml  README.md  build.rs
components/aic8800-arceos/: Cargo.toml
components/aic8800-arceos/src/: lib.rs
components/aic8800/firmware/: .gitignore  README.md
components/aic8800/src/: data.rs  firmware.rs  firmware_manifest.rs  glue_arceos.rs  lib.rs  owner.rs  runtime.rs  softap.rs  transport.rs  wire.rs
components/arm-scmi/: Cargo.toml  README.md
components/arm-scmi/src/: err.rs  lib.rs  shmem.rs
components/arm-scmi/tests/: test.rs
components/arm_vcpu/: CHANGELOG.md  Cargo.toml  rust-toolchain.toml
components/arm_vcpu/src/: context_frame.rs  exception.S  exception.rs  exception_utils.rs  lib.rs  smc.rs  vcpu.rs
components/arm_vcpu/tests/: script_test.rs
components/arm_vgic/: CHANGELOG.md  Cargo.toml  rust-toolchain.toml
components/arm_vgic/src/: devops_impl.rs  interrupt.rs  lib.rs  vgic.rs
components/ax-cgroup/: Cargo.toml  README.md  README_CN.md
components/ax-cgroup/src/: controller.rs  core.rs  cpu.rs  cpuset.rs  io.rs  lib.rs  memory.rs  pids.rs  provider.rs
components/ax-cgroup/testdata/: README.md  cpu.stat.linux  memory.events.linux
components/ax-cpu-local/: Cargo.toml
components/ax-cpu-local/src/: abi.rs  header.rs  identity.rs  lib.rs  platform.rs  register.rs  relocation.rs  symbol.rs
components/ax-cpu-local/tests/: arm_el2_feature_tree_contract.rs  final_image_tls_feature_tree_contract.rs  image_feature_graph_contract.rs  loongarch_anchor_contract.rs  platform_binding_validation.rs  register_mode_contract.rs  register_ownership_contract.rs
components/ax-lazyinit/: CHANGELOG.md  Cargo.toml
components/ax-lazyinit/src/: axtest.rs  lib.rs
components/ax-task/: Cargo.toml
components/ax-task/src/: config.rs  epoch_mpsc.rs  error.rs  facade.rs  irq_wait.rs  irq_wait_tests.rs  lib.rs  reclaim.rs  runtime.rs  task_work.rs  test_runtime.rs  thread_start.rs  wait_queue.rs
components/ax-task/tests/: bounded_irq_contract.rs  context_switch_tail_contract.rs  context_thread_binding_contract.rs  cpu_remote_ownership_contract.rs  current_cpu_lease_contract.rs  current_cpu_lease_semantics.rs  deadline_pi_semantics.rs  deferred_task_work_allocation.rs  deterministic_reference.rs  executor_lifecycle.rs  facade_contract.rs  grub_deadline_semantics.rs  hard_irq_allocation.rs  linux_scheduler_semantics.rs  loom_concurrency.rs  oneshot_scheduler_semantics.rs  owner_hot_path_lock_domains.rs  pi_allocation_contract.rs  policy_update_semantics.rs  runtime_accounting.rs  runtime_handle_soundness_contract.rs  scheduler_contract.rs  smp_balance_semantics.rs  task_work_fairness.rs  zephyr_scheduler_semantics.rs
components/axaddrspace/: CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
components/axaddrspace/src/: addr.rs  frame.rs  lib.rs  memory_accessor.rs
components/axaddrspace/tests/: frame.rs  memory_accessor.rs
components/axbuild/: Cargo.toml
components/axbuild/src/: lib.rs
components/axbus/: Cargo.toml
components/axbus/src/: adapter.rs  atomic_bitmap.rs  factory.rs  irq.rs  ivc.rs  lib.rs  registry.rs  router.rs  runtime.rs  send_sync.rs  trait.rs
components/axconfig-gen/: .gitignore  Cargo.toml  README.md
components/axconfig-gen/axconfig-gen/: CHANGELOG.md  Cargo.toml  README.md
components/axconfig-gen/axconfig-macros/: CHANGELOG.md  Cargo.toml  README.md
components/axconfig-gen/example-configs/: defconfig.toml  output.rs  output.toml
components/axcpu/: CHANGELOG.md  Cargo.toml  README.md  README_CN.md
components/axcpu/src/: cap.rs  exception_table.rs  lib.rs  task_local.rs  trap.rs  uspace_common.rs
components/axcpu/tests/: image_register_mode_contract.rs  loongarch_register_contract.rs  paging.rs  riscv_register_contract.rs  task_context_layout_contract.rs  (+2 more)
components/axdevice/: CHANGELOG.md  Cargo.toml  README.md  README_CN.md
crate_interface_lite/: Cargo.toml  README.md
crate_interface_lite/src/: lib.rs
crate_interface_lite/tests/: test_crate_interface.rs
kernel/: Cargo.toml  build.rs
kernel/src/: lib.rs  logo.rs  main.rs  task.rs
kernel/src/file/: fs.rs  (+2 more)
xtask/: Cargo.toml
xtask/src/: cargo.rs  clippy.rs  ctx.rs  devspace.rs  image.rs  logging.rs  main.rs  menuconfig.rs  qemu_override.rs  tbuld.rs  vmconfig.rs
(+12556 files in other folders)
