[workspace.package]
edition = "2024"
version = "0.5.11"
authors = ["RCore Team <yuchen@tsinghua.edu.cn>"]
license = "Apache-2.0"
repository = "https://github.com/rcore-os/tgoskits"
keywords = ["arceos", "kernel"]
categories = ["os", "no-std"]

[profile.release]
lto = true

[workspace]
resolver = "3"
members = [
    "components/aarch64_sysreg",
    "components/arm_pl011",
    "components/arm_pl031",
    "components/arm_vcpu",
    "components/arm_vgic",
    "components/ax-lazyinit",
    "components/axaddrspace",
    "components/axallocator",
    "components/axbacktrace",
    "components/axconfig-gen/axconfig-gen",
    "components/axconfig-gen/axconfig-macros",
    "components/axcpu",
    "components/axdevice",
    "components/axdevice_base",
    "components/axdriver_crates/axdriver_base",
    "components/axdriver_crates/axdriver_block",
    "components/axdriver_crates/axdriver_display",
    "components/axdriver_crates/axdriver_input",
    "components/axdriver_crates/axdriver_net",
    "components/axdriver_crates/axdriver_pci",
    "components/axdriver_crates/axdriver_virtio",
    "components/axdriver_crates/axdriver_vsock",
    "components/axerrno",
    "components/axfs-ng-vfs",
    "components/axfs_crates/axfs_devfs",
    "components/axfs_crates/axfs_ramfs",
    "components/axfs_crates/axfs_vfs",
    "components/axhvc",
    "components/axio",
    "components/axklib",
    "components/axmm_crates/memory_addr",
    "components/axmm_crates/memory_set",
    "components/axpanic",
    "components/axplat_crates/axplat",
    "components/axplat_crates/axplat-macros",
    "components/axplat_crates/examples/hello-kernel",
    "components/axplat_crates/examples/irq-kernel",
    "components/axplat_crates/examples/smp-kernel",
    "components/axplat_crates/platforms/axplat-aarch64-bsta1000b",
    "components/axplat_crates/platforms/axplat-aarch64-peripherals",
    "components/axplat_crates/platforms/axplat-aarch64-phytium-pi",
    "components/axplat_crates/platforms/axplat-aarch64-qemu-virt",
    "components/axplat_crates/platforms/axplat-aarch64-raspi",
    "components/axplat_crates/platforms/axplat-loongarch64-qemu-virt",
    "components/axplat_crates/platforms/axplat-riscv64-qemu-virt",
    "components/axplat_crates/platforms/axplat-riscv64-sg2002",
    "components/axplat_crates/platforms/axplat-x86-pc",
    "components/axpoll",
    "components/axsched",
    "components/axvcpu",
    "components/axvisor_api",
    "components/axvisor_api/axvisor_api_proc",
    "components/axvm",
    "components/axvmconfig",
    "components/bitmap-allocator",
    "components/cap_access",
    "components/cpumask",
    "components/crate_interface",
    "components/crate_interface/crate_interface_lite",
    "components/crate_interface/test_crates/define-simple-traits",
    "components/crate_interface/test_crates/define-weak-traits",
    "components/crate_interface/test_crates/impl-simple-traits",
    "components/crate_interface/test_crates/impl-weak-partial",
    "components/crate_interface/test_crates/impl-weak-traits",
    "components/crate_interface/test_crates/test-simple",
    "components/crate_interface/test_crates/test-weak",
    "components/crate_interface/test_crates/test-weak-partial",
    "components/ctor_bare/ctor_bare",
    "components/ctor_bare/ctor_bare_macros",
    "components/fxmac_rs",
    "components/handler_table",
    "components/int_ratio",
    "components/kernel_guard",
    "components/lockdep",
    "components/kspin",
    "components/linked_list_r4l",
    "components/loongarch_vcpu",
    "components/page_table_multiarch/page_table_entry",
    "components/page_table_multiarch/page_table_multiarch",
    "components/percpu/percpu",
    "components/percpu/percpu_macros",
    "components/range-alloc-arceos",
    "components/riscv-h",
    "components/riscv_plic",
    "components/riscv_vcpu",
    "components/riscv_vplic",
    "components/rsext4",
    "components/scope-local",
    "components/starry-process",
    "components/starry-signal",
    "components/starry-vm",
    "components/timer_list",
    "components/x86_vcpu",
    "components/x86_vlapic",
    "components/page-table-generic",
    "components/someboot",
    "components/kernutil",
    "components/ranges-ext",
    "components/somehal-macros",
    "components/kasm-aarch64",

    "drivers/blk/nvme-driver",
    "drivers/blk/ramdisk",
    "drivers/blk/rd-block",
    "drivers/blk/simple-sdmmc",
    "drivers/examples/enumerate",
    "drivers/intc/arm-gic-driver",
    "drivers/interface/rdif-base",
    "drivers/interface/rdif-block",
    "drivers/interface/rdif-clk",
    "drivers/interface/rdif-def",
    "drivers/interface/rdif-eth",
    "drivers/interface/rdif-intc",
    "drivers/interface/rdif-pcie",
    "drivers/interface/rdif-power",
    "drivers/interface/rdif-serial",
    "drivers/interface/rdif-systick",
    "drivers/interface/rdif-timer",
    "drivers/net/eth-intel",
    "drivers/net/rd-net",
    "drivers/net/realtek-rtl8125",
    "drivers/npu/rockchip-npu",
    "drivers/pci/pcie",
    "drivers/pci/rk3588-pci",
    "drivers/rdrive",
    "drivers/rdrive-macros",
    "drivers/serial/some-serial",
    "drivers/tpu/sg2002-tpu",
    "drivers/soc/rockchip/rockchip-pm",
    "drivers/soc/rockchip/rockchip-soc",
    "os/StarryOS/kernel",
    "os/StarryOS/starryos",
    "os/arceos/api/arceos_api",
    "os/arceos/api/arceos_posix_api",
    "os/arceos/api/axfeat",
    "os/arceos/examples/helloworld",
    "os/arceos/examples/helloworld-myplat",
    "os/arceos/examples/httpclient",
    "os/arceos/examples/httpserver",
    "os/arceos/examples/shell",
    "os/arceos/examples/std/helloworld",
    "os/arceos/examples/std/httpclient",
    "os/arceos/examples/std/httpserver",
    "os/arceos/examples/std/thread_test",
    "os/arceos/examples/std/io_test",
    "os/arceos/examples/std/tokio_test",
    "os/arceos/examples/std/arce_agent",
    "os/arceos/modules/axalloc",
    "os/arceos/modules/axconfig",
    "os/arceos/modules/axdisplay",
    "os/arceos/modules/axdma",
    "os/arceos/modules/axdriver",
    "os/arceos/modules/axfs",
    "os/arceos/modules/axfs-ng",
    "os/arceos/modules/axhal",
    "os/arceos/modules/axinput",
    "os/arceos/modules/axipi",
    "os/arceos/modules/axlog",
    "os/arceos/modules/axmm",
    "os/arceos/modules/axnet",
    "os/arceos/modules/axnet-ng",
    "os/arceos/modules/axruntime",
    "os/arceos/modules/axsync",
    "os/arceos/modules/axtask",
    "os/arceos/tools/bwbench_client",
    "os/arceos/tools/deptool",
    "os/arceos/tools/raspi4/chainloader",
    "os/arceos/ulib/axlibc",
    "os/arceos/ulib/axstd",
    "os/arceos/ulib/arceos-rust",
    "os/arceos/ulib/arceos-rust/lib",
    "os/axvisor",
    "platform/axplat-dyn",
    "platform/somehal",
    "platform/riscv64-visionfive2",
    "platform/riscv64-qemu-virt",
    "platform/x86-qemu-q35",
    "scripts/axbuild",
    "test-suit/arceos/rust/display",
    "test-suit/arceos/rust/backtrace",
    "test-suit/arceos/rust/exception",
    "test-suit/arceos/rust/fs/shell",
    "test-suit/arceos/rust/memtest",
    "test-suit/arceos/rust/net/echoserver",
    "test-suit/arceos/rust/net/httpclient",
    "test-suit/arceos/rust/net/httpserver",
    "test-suit/arceos/rust/net/udpserver",
    "test-suit/arceos/rust/task/affinity",
    "test-suit/arceos/rust/task/ipi",
    "test-suit/arceos/rust/task/irq",
    "test-suit/arceos/rust/task/lockdep",
    "test-suit/arceos/rust/task/parallel",
    "test-suit/arceos/rust/task/priority",
    "test-suit/arceos/rust/task/sleep",
    "test-suit/arceos/rust/task/tls",
    "test-suit/arceos/rust/task/wait_queue",
    "test-suit/arceos/rust/task/yield",
    "test-suit/arceos/std/qemu-smp1/arce_agent",
    "test-suit/arceos/std/qemu-smp1/helloworld",
    "test-suit/arceos/std/qemu-smp1/httpclient",
    "test-suit/arceos/std/qemu-smp1/httpserver",
    "test-suit/arceos/std/qemu-smp1/io_test",
    "test-suit/arceos/std/qemu-smp1/thread_test",
    "test-suit/arceos/std/qemu-smp1/tokio_test",
    "xtask",
]

[workspace.dependencies]
# Local workspace crates
aarch64_sysreg = { version = "0.3.7", path = "components/aarch64_sysreg" }
arceos-affinity = { version = "0.3.1", path = "test-suit/arceos/rust/task/affinity" }
arceos-backtrace = { version = "0.3.1", path = "test-suit/arceos/rust/backtrace" }
arceos-display = { version = "0.3.1", path = "test-suit/arceos/rust/display" }
arceos-exception = { version = "0.3.1", path = "test-suit/arceos/rust/exception" }
arceos-fs-shell = { version = "0.3.1", path = "test-suit/arceos/rust/fs/shell" }
arceos-ipi = { version = "0.3.0", path = "test-suit/arceos/rust/task/ipi" }
arceos-irq = { version = "0.3.1", path = "test-suit/arceos/rust/task/irq" }
arceos-lockdep = { version = "0.3.1", path = "test-suit/arceos/rust/task/lockdep" }
arceos-memtest = { version = "0.3.1", path = "test-suit/arceos/rust/memtest" }
arceos-net-echoserver = { version = "0.3.1", path = "test-suit/arceos/rust/net/echoserver" }
arceos-net-httpclient = { version = "0.3.1", path = "test-suit/arceos/rust/net/httpclient" }
arceos-net-httpserver = { version = "0.3.1", path = "test-suit/arceos/rust/net/httpserver" }
arceos-net-udpserver = { version = "0.3.1", path = "test-suit/arceos/rust/net/udpserver" }
arceos-parallel = { version = "0.3.1", path = "test-suit/arceos/rust/task/parallel" }
arceos-priority = { version = "0.3.1", path = "test-suit/arceos/rust/task/priority" }
arceos-rust = { version = "0.1.1", path = "os/arceos/ulib/arceos-rust", default-features = false }
arceos-sleep = { version = "0.3.1", path = "test-suit/arceos/rust/task/sleep" }
arceos-tls = { version = "0.3.1", path = "test-suit/arceos/rust/task/tls" }
arceos-wait-queue = { version = "0.3.1", path = "test-suit/arceos/rust/task/wait_queue" }
arceos-yield = { version = "0.3.1", path = "test-suit/arceos/rust/task/yield" }
arm_vcpu = { version = "0.5.6", path = "components/arm_vcpu" }
arm_vgic = { version = "0.4.7", path = "components/arm_vgic" }
ax-alloc = { version = "0.7.0", path = "os/arceos/modules/axalloc" }
ax-allocator = { version = "0.5.0", path = "components/axallocator" }
ax-api = { version = "0.5.14", path = "os/arceos/api/arceos_api" }
ax-arm-pl011 = { version = "0.3.7", path = "components/arm_pl011" }
ax-arm-pl031 = { version = "0.4.6", path = "components/arm_pl031" }
ax-cap-access = { version = "0.3.5", path = "components/cap_access" }
ax-config = { version = "0.5.10", path = "os/arceos/modules/axconfig" }
ax-config-gen = { version = "0.4.9", path = "components/axconfig-gen/axconfig-gen" }
ax-config-macros = { version = "0.4.9", path = "components/axconfig-gen/axconfig-macros" }
ax-cpu = { version = "0.6.2", path = "components/axcpu" }
ax-cpumask = { version = "0.3.5", path = "components/cpumask" }
ax-crate-interface = { version = "0.5.7", path = "components/crate_interface" }
ax-crate-interface-lite = { version = "0.3.5", path = "components/crate_interface/crate_interface_lite" }
ax-ctor-bare = { version = "0.4.8", path = "components/ctor_bare/ctor_bare" }
ax-ctor-bare-macros = { version = "0.4.8", path = "components/ctor_bare/ctor_bare_macros" }
ax-display = { version = "0.5.12", path = "os/arceos/modules/axdisplay" }
ax-dma = { version = "0.5.13", path = "os/arceos/modules/axdma" }
ax-driver = { version = "0.5.14", path = "os/arceos/modules/axdriver" }
ax-driver-base = { version = "0.3.12", path = "components/axdriver_crates/axdriver_base" }
ax-driver-block = { version = "0.3.12", path = "components/axdriver_crates/axdriver_block" }
ax-driver-display = { version = "0.3.12", path = "components/axdriver_crates/axdriver_display" }
ax-driver-input = { version = "0.3.13", path = "components/axdriver_crates/axdriver_input" }
ax-driver-net = { version = "0.3.12", path = "components/axdriver_crates/axdriver_net" }
ax-driver-pci = { version = "0.3.12", path = "components/axdriver_crates/axdriver_pci" }
ax-driver-virtio = { version = "0.3.12", path = "components/axdriver_crates/axdriver_virtio" }
ax-driver-vsock = { version = "0.3.12", path = "components/axdriver_crates/axdriver_vsock" }
ax-errno = { version = "0.4.8", path = "components/axerrno" }
ax-feat = { version = "0.5.14", path = "os/arceos/api/axfeat" }
ax-fs = { version = "0.5.12", path = "os/arceos/modules/axfs" }
ax-fs-devfs = { version = "0.3.9", path = "components/axfs_crates/axfs_devfs" }
ax-fs-ng = { version = "0.5.13", path = "os/arceos/modules/axfs-ng" }
ax-fs-ramfs = { version = "0.3.10", path = "components/axfs_crates/axfs_ramfs" }
ax-fs-vfs = { version = "0.3.9", path = "components/axfs_crates/axfs_vfs" }
ax-hal = { version = "0.5.13", path = "os/arceos/modules/axhal" }
ax-handler-table = { version = "0.3.7", path = "components/handler_table" }
ax-helloworld = { version = "0.3.1", path = "os/arceos/examples/helloworld" }
ax-helloworld-myplat = { version = "0.3.1", path = "os/arceos/examples/helloworld-myplat" }
ax-httpclient = { version = "0.3.1", path = "os/arceos/examples/httpclient" }
ax-httpserver = { version = "0.3.1", path = "os/arceos/examples/httpserver" }
ax-input = { version = "0.5.12", path = "os/arceos/modules/axinput" }
ax-int-ratio = { version = "0.3.7", path = "components/int_ratio" }
ax-io = { version = "0.5.5", path = "components/axio" }
ax-ipi = { version = "0.5.12", path = "os/arceos/modules/axipi" }
ax-kernel-guard = { version = "0.3.10", path = "components/kernel_guard" }
ax-lockdep = { version = "0.1.0", path = "components/lockdep" }
ax-kspin = { version = "0.3.8", path = "components/kspin" }
ax-lazyinit = { version = "0.4.7", path = "components/ax-lazyinit" }
ax-libc = { version = "0.5.13", path = "os/arceos/ulib/axlibc" }
ax-linked-list-r4l = { version = "0.5.5", path = "components/linked_list_r4l" }
ax-log = { version = "0.5.12", path = "os/arceos/modules/axlog" }
ax-memory-addr = { version = "0.6.8", path = "components/axmm_crates/memory_addr" }
ax-memory-set = { version = "0.6.7", path = "components/axmm_crates/memory_set" }
axpanic = { version = "0.1.0", path = "components/axpanic" }
ax-mm = { version = "0.5.13", path = "os/arceos/modules/axmm" }
ax-net = { version = "0.5.12", path = "os/arceos/modules/axnet" }
ax-net-ng = { version = "0.5.13", path = "os/arceos/modules/axnet-ng" }
ax-page-table-entry = { version = "0.8.9", path = "components/page_table_multiarch/page_table_entry" }
ax-page-table-multiarch = { version = "0.8.8", path = "components/page_table_multiarch/page_table_multiarch" }
ax-percpu = { version = "0.4.11", path = "components/percpu/percpu" }
ax-percpu-macros = { version = "0.4.10", path = "components/percpu/percpu_macros" }
ax-plat = { version = "0.5.8", path = "components/axplat_crates/axplat" }
ax-plat-aarch64-bsta1000b = { version = "0.5.8", path = "components/axplat_crates/platforms/axplat-aarch64-bsta1000b" }
ax-plat-aarch64-peripherals = { version = "0.5.8", path = "components/axplat_crates/platforms/axplat-aarch64-peripherals" }
ax-plat-aarch64-phytium-pi = { version = "0.5.9", path = "components/axplat_crates/platforms/axplat-aarch64-phytium-pi" }
ax-plat-aarch64-qemu-virt = { version = "0.5.8", path = "components/axplat_crates/platforms/axplat-aarch64-qemu-virt" }
ax-plat-aarch64-raspi = { version = "0.5.9", path = "components/axplat_crates/platforms/axplat-aarch64-raspi" }
ax-plat-loongarch64-qemu-virt = { version = "0.5.8", path = "components/axplat_crates/platforms/axplat-loongarch64-qemu-virt" }
ax-plat-macros = { version = "0.3.6", path = "components/axplat_crates/axplat-macros" }
ax-plat-riscv64-qemu-virt = { version = "0.5.7", path = "components/axplat_crates/platforms/axplat-riscv64-qemu-virt" }
ax-plat-riscv64-sg2002 = { version = "0.3.4", path = "components/axplat_crates/platforms/axplat-riscv64-sg2002" }
ax-plat-x86-pc = { version = "0.5.8", path = "components/axplat_crates/platforms/axplat-x86-pc" }
ax-posix-api = { version = "0.5.14", path = "os/arceos/api/arceos_posix_api" }
ax-riscv-plic = { version = "0.4.5", path = "components/riscv_plic" }
ax-runtime = { version = "0.5.14", path = "os/arceos/modules/axruntime" }
ax-sched = { version = "0.5.6", path = "components/axsched" }
ax-shell = { version = "0.3.1", path = "os/arceos/examples/shell" }
ax-std = { version = "0.5.13", path = "os/arceos/ulib/axstd" }
ax-sync = { version = "0.5.13", path = "os/arceos/modules/axsync" }
ax-task = { version = "0.5.14", path = "os/arceos/modules/axtask" }
ax-timer-list = { version = "0.3.5", path = "components/timer_list" }
axaddrspace = { version = "0.5.8", path = "components/axaddrspace" }
axbacktrace = { version = "0.3.9", path = "components/axbacktrace" }
axbuild = { version = "0.4.6", path = "scripts/axbuild" }
axdevice = { version = "0.4.8", path = "components/axdevice" }
axdevice_base = { version = "0.4.8", path = "components/axdevice_base" }
axfs-ng-vfs = { version = "0.4.0", path = "components/axfs-ng-vfs" }
axhvc = { version = "0.4.6", path = "components/axhvc" }
axklib = { version = "0.5.7", path = "components/axklib" }
axplat-dyn = { version = "0.6.0", path = "platform/axplat-dyn", default-features = false }
axplat-riscv64-visionfive2 = { version = "0.1.2", path = "platform/riscv64-visionfive2" }
axplat-riscv64-qemu-virt-hv = { version = "0.5.6", path = "platform/riscv64-qemu-virt" }
axplat-x86-qemu-q35 = { version = "0.4.6", path = "platform/x86-qemu-q35" }
axpoll = { version = "0.3.9", path = "components/axpoll" }
axvcpu = { version = "0.5.6", path = "components/axvcpu" }
axvisor = { version = "0.5.6", path = "os/axvisor" }
axvisor_api = { version = "0.5.8", path = "components/axvisor_api" }
axvisor_api_proc = { version = "0.5.7", path = "components/axvisor_api/axvisor_api_proc" }
axvm = { version = "0.5.7", path = "components/axvm", default-features = false }
axvmconfig = { version = "0.5.0", path = "components/axvmconfig", default-features = false }
bitmap-allocator = { version = "0.4.5", path = "components/bitmap-allocator" }
bwbench-client = { version = "0.3.1", path = "os/arceos/tools/bwbench_client" }
define-simple-traits = { version = "0.3.4", path = "components/crate_interface/test_crates/define-simple-traits" }
define-weak-traits = { version = "0.3.4", path = "components/crate_interface/test_crates/define-weak-traits" }
deptool = { version = "0.3.1", path = "os/arceos/tools/deptool" }
fxmac_rs = { version = "0.5.0", path = "components/fxmac_rs" }
hello-kernel = { version = "0.3.1", path = "components/axplat_crates/examples/hello-kernel" }
impl-simple-traits = { version = "0.3.4", path = "components/crate_interface/test_crates/impl-simple-traits" }
impl-weak-partial = { version = "0.3.4", path = "components/crate_interface/test_crates/impl-weak-partial" }
impl-weak-traits = { version = "0.3.4", path = "components/crate_interface/test_crates/impl-weak-traits" }
arm-gic-driver = { version = "0.17.1", path = "drivers/intc/arm-gic-driver" }
enumerate = { version = "0.1.1", path = "drivers/examples/enumerate" }
eth-intel = { version = "0.1.2", path = "drivers/net/eth-intel" }
irq-kernel = { version = "0.3.1", path = "components/axplat_crates/examples/irq-kernel" }
loongarch_vcpu = { version = "0.5.1", path = "components/loongarch_vcpu" }
mingo = { version = "0.8.3", path = "os/arceos/tools/raspi4/chainloader" }
range-alloc-arceos = { version = "0.3.9", path = "components/range-alloc-arceos" }
riscv-h = { version = "0.4.7", path = "components/riscv-h" }
riscv_vcpu = { version = "0.5.7", path = "components/riscv_vcpu" }
riscv_vplic = { version = "0.4.10", path = "components/riscv_vplic" }
nvme-driver = { version = "0.4.2", path = "drivers/blk/nvme-driver" }
pcie = { version = "0.6.1", path = "drivers/pci/pcie" }
ramdisk = { version = "0.1.1", path = "drivers/blk/ramdisk" }
rd-block = { version = "0.1.2", path = "drivers/blk/rd-block" }
rd-net = { version = "0.1.1", path = "drivers/net/rd-net" }
rdif-base = { version = "0.8.1", path = "drivers/interface/rdif-base" }
rdif-block = { version = "0.7.1", path = "drivers/interface/rdif-block" }
rdif-clk = { version = "0.5.1", path = "drivers/interface/rdif-clk" }
rdif-def = { version = "0.2.3", path = "drivers/interface/rdif-def" }
rdif-eth = { version = "0.2.1", path = "drivers/interface/rdif-eth" }
rdif-intc = { version = "0.14.1", path = "drivers/interface/rdif-intc" }
rdif-pcie = { version = "0.2.1", path = "drivers/interface/rdif-pcie" }
rdif-power = { version = "0.7.1", path = "drivers/interface/rdif-power" }
rdif-serial = { version = "0.7.1", path = "drivers/interface/rdif-serial" }
rdif-systick = { version = "0.6.1", path = "drivers/interface/rdif-systick" }
rdif-timer = { version = "0.6.1", path = "drivers/interface/rdif-timer" }
rk3588-pci = { version = "0.2.0", path = "drivers/pci/rk3588-pci" }
rockchip-npu = { version = "0.2.0", path = "drivers/npu/rockchip-npu" }
realtek-rtl8125 = { version = "0.2.0", path = "drivers/net/realtek-rtl8125" }
rockchip-pm = { version = "0.4.3", path = "drivers/soc/rockchip/rockchip-pm" }
rockchip-soc = { version = "0.2.0", path = "drivers/soc/rockchip/rockchip-soc" }
sg2002-tpu = { version = "0.1.0", path = "drivers/tpu/sg2002-tpu" }
rdrive = { version = "0.20.1", path = "drivers/rdrive" }
rdrive-macros = { version = "0.4.2", path = "drivers/rdrive-macros" }
rsext4 = { version = "0.4.0", path = "components/rsext4" }
scope-local = { version = "0.3.7", path = "components/scope-local" }
simple-sdmmc = { version = "0.1.1", path = "drivers/blk/simple-sdmmc" }
smoltcp = { version = "0.13.1", default-features = false }
smp-kernel = { version = "0.3.1", path = "components/axplat_crates/examples/smp-kernel" }
starry-kernel = { version = "0.5.10", path = "os/StarryOS/kernel" }
starry-process = { version = "0.4.6", path = "components/starry-process" }
starry-signal = { version = "0.6.1", path = "components/starry-signal" }
starry-vm = { version = "0.5.7", path = "components/starry-vm" }
starryos = { version = "0.5.10", path = "os/StarryOS/starryos" }
test-simple = { version = "0.3.4", path = "components/crate_interface/test_crates/test-simple" }
test-weak = { version = "0.3.4", path = "components/crate_interface/test_crates/test-weak" }
test-weak-partial = { version = "0.3.4", path = "components/crate_interface/test_crates/test-weak-partial" }
tg-xtask = { version = "0.5.11", path = "xtask" }
x86_vcpu = { version = "0.5.7", path = "components/x86_vcpu", default-features = false }
x86_vlapic = { version = "0.4.8", path = "components/x86_vlapic" }
page-table-generic = { version = "0.7.2", path = "components/page-table-generic" }
someboot = { version = "0.1.15", path = "components/someboot" }
some-serial = { version = "0.4.1", path = "drivers/serial/some-serial" }
kernutil = { path = "components/kernutil", version = "0.2.2" }
ranges-ext = { version = "0.6.4", path = "components/ranges-ext" }
somehal-macros = { path = "components/somehal-macros", version = "0.1.3" }
kasm-aarch64 = { path = "components/kasm-aarch64", version = "0.2.1" }
somehal = { version = "0.6.7", path = "platform/somehal" }

# External crates
anyhow = { version = "1.0", default-features = false }
bitflags = "2.11"
byte-unit = { version = "5", default-features = false, features = ["byte"] }
derive_more = { version = "2.1", default-features = false, features = ["full"] }
bindgen = "0.72"
buddy-slab-allocator = "0.4"
cfg-if = "1.0"
chrono = { version = "0.4", default-features = false }
enum_dispatch = "0.3"
env_logger = "0.11"
event-listener = { version = "5.4.0", default-features = false }
heapless = "0.9"
schemars = "1.2.1"
toml = "1"
dma-api = { version = "0.7.2" }
mmio-api = "0.2.1"
lazy_static = { version = "1.5", features = ["spin_no_std"] }
lock_api = { version = "0.4", default-features = false }
log = "0.4"
spin = "0.10"
ostool = { version = "0.15" }
uefi = "0.36"
fdt-edit = "0.2.3"
fdt-raw = "0.3"
thiserror = { version = "2", default-features = false }
tock-registers = "0.10"
x86 = "0.52"
